Fix word translation typo

--- a/themes/src/main/resources-community/theme/base/account/messages/messages_es.properties
+++ b/themes/src/main/resources-community/theme/base/account/messages/messages_es.properties
@@ -80,7 +80,7 @@ account=Cuenta
 federatedIdentity=Identidad federada
 authenticator=Autenticador
 sessions=Sesiones
-log=Regisro
+log=Registro
 
 application=Aplicaci\u00F3n
 availablePermissions=Permisos disponibles
